# Safety_PcbDesoldering

./: readme.txt
desoldering_pcb/: CMakeLists.txt  package.xml  setup.py
desoldering_pcb/data_base/: data_20240605_120819.json  data_20240717_153332.json
desoldering_pcb/scripts/: config_collector.py  gui.py  heating_sequence.py
desoldering_pcb/src/desoldering_pcb/: data_object.py  moveit_interface.py  realsense_class.py  safety_class.py
robot_custom_msgs/: CMakeLists.txt  package.xml
robot_custom_msgs/msg/: gui_msg.msg
